<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_browser"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_data"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_data" />
        <item
            android:id="@+id/nav_worker"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_worker" />
        <item
            android:id="@+id/nav_sensor"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_sensor" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_recorder"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/menu_recorder" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_file"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="@string/menu_file" />
        <item
            android:id="@+id/nav_recourse"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_recourse" />
    </group>
</menu>