<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_data">

    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.khrechkorv.mireaproject.ui.WebViewFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_web_view" />

    <fragment
        android:id="@+id/nav_data"
        android:name="ru.mirea.khrechkorv.mireaproject.ui.DataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/nav_worker"
        android:name="ru.mirea.khrechkorv.mireaproject.ui.WorkerFragment"
        android:label="@string/menu_worker"
        tools:layout="@layout/fragment_worker" />

    <fragment
        android:id="@+id/nav_sensor"
        android:name="ru.mirea.khrechkorv.mireaproject.ui.SensorFragment"
        android:label="@string/menu_sensor"
        tools:layout="@layout/fragment_sensor" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.khrechkorv.mireaproject.ui.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_recorder"
        android:name="ru.mirea.khrechkorv.mireaproject.ui.RecorderFragment"
        android:label="@string/menu_recorder"
        tools:layout="@layout/fragment_recorder" />
</navigation>